syntax = "proto3";
package app;

option go_package = "github.com/hyperledger-labs/yui-fabric-ibc/chaincode/app";

import "gogoproto/gogo.proto";

message RequestQuery {
    string data = 1 [(gogoproto.jsontag) = "data"];
    string path = 2 [(gogoproto.jsontag) = "path"];
}

message ResponseQuery {
    string key   = 1 [(gogoproto.jsontag) = "key"];
    string value = 2 [(gogoproto.jsontag) = "value"];
}

message ResponseTx {
    string data = 1 [(gogoproto.jsontag) = "data"];
    string log  = 2 [(gogoproto.jsontag) = "log"];
    string events = 3 [(gogoproto.jsontag) = "events"];
}
